--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -63,7 +63,7 @@
             v-on:click="loadCaseFile"
             class="add-docket-info btn btn-primary"
           >
-            Load Case File<br><i class="fas fa-file"></i>
+            Load Case File<br /><i class="fas fa-file"></i>
           </button>
           <button
             v-on:click="addAndOpenManagePage"
@@ -88,10 +88,19 @@
           </p>
         </a>
         <a target="_blank" href="disclaimer.html" class="title-page__link">
-          <p style="padding-bottom: 20px;">
+          <p>
             Terms &amp; Conditions <i class="fas fa-external-link-alt"></i>
           </p>
         </a>
+        <div class="donate-box">
+          <a
+            class="edit-counts btn btn-success donate title-page__link"
+            href="https://www.paypal.com/paypalme/c4btv"
+            target="_blank"
+          >
+            Donate to Code for BTV!&nbsp;&nbsp;&nbsp;<i class="fas fa-hand-holding-usd"></i>
+          </a>
+        </div>
       </div>
       <div class="active-state" v-else>
         <div class="popTop">
